added more classes for damaged location

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -280,6 +280,6 @@ easing the burden of filing an insurance claim and getting your car repaired.</h
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
   <p>Created by Kushagra Bhatnagar, 2019<br>
-  <a href="mailto:kushagra@arya.ai" title="Email">Email</a> | <a href="https://github.com/kushagrabh13" title="Github">Github</a> | <a href="https://in.linkedin.com/in/kushagrabhatnagar" title="LinkedIn">LinkedIn</a></p> 
+  <a href="mailto:kushagrabh13@gmail.com" title="Email">Email</a> | <a href="https://github.com/kushagrabh13" title="Github">Github</a> | <a href="https://in.linkedin.com/in/kushagrabhatnagar" title="LinkedIn">LinkedIn</a></p> 
 </footer>
 </html>
